// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjectsPage when finished loading correctly renders 1`] = `
<div>
  <Component
    text="Projects"
  />
  <Component
    projects="list-of-projects"
  />
  <div>
    <Button
      active={false}
      block={false}
      bsClass="btn"
      bsStyle="default"
      disabled={false}
      onClick={[Function]}
    >
      Add
    </Button>
  </div>
</div>
`;

exports[`ProjectsPage when loading renders with loading information 1`] = `
<div>
  <Component
    text="Projects"
  />
  <Component
    text="Fetching projects..."
  />
  <div>
    <Button
      active={false}
      block={false}
      bsClass="btn"
      bsStyle="default"
      disabled={false}
      onClick={[Function]}
    >
      Add
    </Button>
  </div>
</div>
`;

exports[`ProjectsPage with error renders with error bar 1`] = `
<div>
  <Component
    text="Projects"
  />
  <Component
    detail="an error"
    text="Could not load projects"
  />
  <div>
    <Button
      active={false}
      block={false}
      bsClass="btn"
      bsStyle="default"
      disabled={false}
      onClick={[Function]}
    >
      Add
    </Button>
  </div>
</div>
`;
